tablet mixins v2, updated margins and footer

--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
     </section>
 
     <footer class="contact">
-        <h1>Get in Touch</h1>
-        <div>
+        
+        <div class="contact__socials">
+            <h1>Get in Touch</h1>
             <a class="icons" href="#">
                 <img src="./assets/Icons/SVG/Icon-instagram.svg" alt="instagram">
             </a>
@@ -100,7 +101,7 @@
             </a>
             <p>Copyright The Bees Knees © 2021 All Rights Reserved</p>
         </div>
-        
+
     </footer>
 
 </body>
