--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <section class="about">
         <h1>About the Musicians</h1>
         <img src="./assets/Images/band.jpg" alt="band">
-        <p>“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”</p>
-        <p> - Bryan Teddy, lead vocalist of The Bees Knees</p>
+        <p class="about__quote">“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”</p>
+        <p class="about__credit"> - Bryan Teddy, lead vocalist of The Bees Knees</p>
     </section>
 
     <article class="bio">
