--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body>
     
     <header class="header">
-        <a href="#">
-        <img src="./assets/Logo/Logo-bandsite.svg" alt="Band Site Logo">
+        <a href="./index.html">
+            <img class="header__img" src="./assets/Logo/Logo-bandsite.svg" alt="Band Site Logo">
         </a>
 
         <nav class="navbar">
             <a href="./index.html">
-                <div>Biography</div>
+                <div class="navbar__tab" >Biography</div>
             </a>
-            <a href="#">
-                <div>Shows</div>
+            <a href="/">
+                <div class="navbar__tab" >Shows</div>
             </a>
         </nav>
     </header>
@@ -29,7 +29,7 @@
     </section>
 
     <section class="about">
-        <h1>About the Musicians</h1>
+        <h2 class="about__title">About the Musicians</h2>
         <img src="./assets/Images/band.jpg" alt="band">
         <p class="about__quote">“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”</p>
         <p class="about__credit"> - Bryan Teddy, lead vocalist of The Bees Knees</p>
