Updated folder structure(shows-html, scripts, shows-css-scss), added header and footer to shows

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="./index.html">
                 <div class="navbar__tab" >Biography</div>
             </a>
-            <a href="/">
+            <a href="./pages/shows.html">
                 <div class="navbar__tab" >Shows</div>
             </a>
         </nav>
