--- a/pages/shows.html
+++ b/pages/shows.html
@@ -24,6 +24,25 @@
         </nav>
     </header>
 
+    <section class="hero">
+        <div>
+            <h2 class="hero__album">Beautiful Beasts Album</h2>
+            <h1 class="hero__song">Queen of Yellow x<br>For The Strings</h1>
+        </div>   
+        <div class="hero__soundcloud">
+            <iframe width="100%" max-height="auto" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/284979796&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+                <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+                    <a href="https://soundcloud.com/muramasamusic" title="Mura Masa" target="_blank" style="color: #cccccc; text-decoration: none;">
+                        Mura Masa
+                    </a>
+                    <a href="https://soundcloud.com/muramasamusic/love-ick" title="Love$ick (feat. A$AP Rocky)" target="_blank" style="color: #cccccc; text-decoration: none;">
+                        Love$ick (feat. A$AP Rocky)
+                    </a>
+                </div>
+        </div>
+    </section>
+
+
 
     <footer class="contact">
         <div class="contact__socials">
