commentsPage html and style created

--- a/index.html
+++ b/index.html
@@ -58,6 +58,30 @@
             </div>
     </section>
 
+    <section class="commentsContainer">
+        
+        <h2>Join the Conversation</h2>
+
+        <form class="commentsPage">
+                <h3 class="commentsPage__title">NAME</h3>
+                <label>
+                    <img class="profilePic" src="./assets/Images/Mohan-muruge.jpg" alt="mohan">
+                    <input class="commentsPage__name" type="text" name="name" value="Enter your name"/>
+                </label>
+
+                <h3 class="commentsPage__title">COMMENT</h3>
+                <label>
+                    <input class="commentsPage__comment" type="text" name="comment" value="Add a new comment">
+                </label>
+
+                <label>
+                    <input class="commentsPage__submit" type="submit" value="COMMENT">
+                </label>
+        </form>
+
+
+    </section>
+
     <footer class="contact">
         <div class="contact__socials">
             <h2 class="contact__title">Get in Touch</h2>
