--- a/pages/shows.html
+++ b/pages/shows.html
@@ -42,7 +42,10 @@
         </div>
     </section>
 
-
+    <section class="shows">
+        <h2>Shows</h2>
+        
+    </section>
 
     <footer class="contact">
         <div class="contact__socials">
