Added shows section html and sass

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+
     <header class="header">
         <a href="../index.html">
             <img class="header__img" src="../assets/Logo/Logo-bandsite.svg" alt="Band Site Logo">
@@ -44,7 +45,17 @@
 
     <section class="shows">
         <h2>Shows</h2>
-        
+            <!-- <a href="" class="shows__link"> -->
+                <div>
+                    <h3 class="shows__title">DATE</h3>
+                    <p class="shows__date" >Mon Sept 06</p>
+                    <h3 class="shows__title">VENUE</h3>
+                    <p class="shows__venue">Ronald Lane</p>
+                    <h3 class="shows__title" >LOCATIONS</h3>
+                    <p class="shows__location">San Francisco</p>
+                    <button type="button">BUY TICKETS</button>
+                </div>
+            <!-- </a> -->
     </section>
 
     <footer class="contact">
@@ -88,8 +99,6 @@
         </div>
 
     </footer>
-
-
 
 </body>
 
