Border changes to buttons and form fields

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -53,7 +53,7 @@
                     <p class="shows__venue">Ronald Lane</p>
                     <h3 class="shows__title" >LOCATIONS</h3>
                     <p class="shows__location">San Francisco</p>
-                    <button type="button">BUY TICKETS</button>
+                    <button class="shows__button" type="button">BUY TICKETS</button>
                 </div>
             <!-- </a> -->
     </section>
