--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             class="commentsPage__name"
             type="text"
             name="name"
-            value="Enter your name"
+            placeholder="Enter your name"
           />
         </label>
 
@@ -110,7 +110,7 @@
             class="commentsPage__comment"
             type="text"
             name="comment"
-            value="Add a new comment"
+            placeholder="Add a new comment"
           />
         </label>
 
