--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
           <input class="commentsPage__submit" type="submit" value="COMMENT" />
         </label>
       </form>
+
+      <div class="commentsSectionContainer"></div>
     </section>
 
     <footer class="contact">
